[build-system]
requires = [ "setuptools>=42", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "usepolvo-cli"
version = "0.1.5"
description = "An all-in-one integration CLI package."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [ "click==8.1.7", "python-dotenv==1.0.1", "usepolvo==0.1.17",]
[[project.authors]]
name = "Caio Pizzol"
email = "caio@usepolvo.com"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/usepolvo/usepolvo-cli"
repository = "https://github.com/usepolvo/usepolvo-cli"
documentation = "https://github.com/usepolvo/usepolvo-cli"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[project.entry-points.console_scripts]
usepolvo = "usepolvo.cli:cli"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--maxfail=2 -ra"
testpaths = [ "tests",]
